[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_osnova.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_outline.png" type="Texture" id=2]
[ext_resource path="res://Scripts/taperecorder.gd" type="Script" id=3]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_music_stop_button.png" type="Texture" id=4]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_music_stop_button_clicked.png" type="Texture" id=5]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_music_back_button_clicked.png" type="Texture" id=6]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_music_back_button.png" type="Texture" id=7]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_music_next_button.png" type="Texture" id=8]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_music_next_button_clicked.png" type="Texture" id=9]
[ext_resource path="res://Songs/MusicPlayer/music_by_Alexey_sovest_inst.mp3" type="AudioStream" id=10]
[ext_resource path="res://Songs/MusicPlayer/music_by_Alexey_sdacha_inst.mp3" type="AudioStream" id=11]
[ext_resource path="res://Sprites/TapeRecorder/tape_recorder_fixed_outline2.png" type="Texture" id=12]

[node name="tapeRecorder" type="Node2D"]
script = ExtResource( 3 )

[node name="TapeRecorderOsnova" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="ClickPlay" type="TextureButton" parent="TapeRecorderOsnova"]
margin_left = 780.0
margin_top = 492.0
margin_right = 848.0
margin_bottom = 597.0
toggle_mode = true
texture_hover = ExtResource( 12 )

[node name="ClickPause" type="TextureButton" parent="TapeRecorderOsnova"]
margin_left = 871.667
margin_top = 491.667
margin_right = 939.667
margin_bottom = 596.667
texture_hover = ExtResource( 12 )

[node name="ClickStop" type="TextureButton" parent="TapeRecorderOsnova"]
margin_left = 963.333
margin_top = 491.667
margin_right = 1031.33
margin_bottom = 596.667
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 2 )

[node name="ClickMusicBack" type="TextureButton" parent="TapeRecorderOsnova"]
margin_left = 1056.67
margin_top = 491.667
margin_right = 1124.67
margin_bottom = 596.667
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 2 )

[node name="ClickMusicNext" type="TextureButton" parent="TapeRecorderOsnova"]
margin_left = 1148.33
margin_top = 491.667
margin_right = 1216.33
margin_bottom = 596.667
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 2 )

[node name="AudioStreamPlayerSdachaInst" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -11.0

[node name="AudioStreamPlayerSovestInst" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -11.0

[connection signal="pressed" from="TapeRecorderOsnova/ClickPlay" to="." method="_on_ClickPlay_pressed"]
[connection signal="pressed" from="TapeRecorderOsnova/ClickPause" to="." method="_on_ClickPause_pressed"]
[connection signal="button_down" from="TapeRecorderOsnova/ClickStop" to="." method="_on_ClickStop_button_down"]
[connection signal="button_down" from="TapeRecorderOsnova/ClickMusicBack" to="." method="_on_ClickMusicBack_button_down"]
[connection signal="button_down" from="TapeRecorderOsnova/ClickMusicNext" to="." method="_on_ClickMusicNext_button_down"]
